# mcp9808-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: address.rs  error.rs  lib.rs  prelude.rs  reg.rs  reg_conf.rs  reg_device_id.rs  reg_manuf_id.rs  reg_res.rs  reg_temp.rs  reg_temp_alert_crit.rs  reg_temp_alert_hi.rs  reg_temp_alert_lo.rs  reg_temp_alert_lower.rs  reg_temp_alert_upper.rs  reg_temp_crit.rs  reg_temp_generic.rs
