[package]
name = "mcp9808"
version = "0.1.0"
authors = ["Michael Böckling <michael@boeckling.net>"]
repository = "https://github.com/MrBuddyCasino/mcp9808-rs"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "microchip", "driver", "temperature", "sensor"]
license = "MIT OR Apache-2.0"
description = "Platform agnostic Rust driver for the Microchip MCP9808 temperature sensor."
readme = "README.md"

[dependencies]
embedded-hal = "0.1.2"
bit_field = "0.9.0"

[dependencies.cast]
version = "0.2.2"
default-features = false

[profile.release]
debug = true
lto = true